# diffdrive_arduino

./: .gitignore  CMakeLists.txt  LICENSE  README.md  diffdrive_arduino.xml  fake_robot_hardware.xml  package.xml  robot_hardware.xml
bringup/launch/: diffbot.launch.py
controllers/: fake_robot_controller.yaml  robot_controller_example.yaml
description/launch/: view_robot.launch.py
description/ros2_control/: diffbot.ros2_control.xacro
description/urdf/: diffbot.urdf.xacro
doc/: userdoc.rst
hardware/: diffbot_system.cpp
hardware/include/diffdrive_arduino/: arduino_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
include/diffdrive_arduino/: arduino_comms.h  config.h  diffdrive_arduino.h  fake_robot.h  real_robot.h  wheel.h
launch/: fake_robot.launch.py  test_robot.launch.py
src/: arduino_comms.cpp  diffdrive_arduino.cpp  diffdrive_robot.cpp  fake_robot.cpp  real_robot.cpp  wheel.cpp
