<?xml version="1.0"?>
<package format="2">
  <name>diffdrive_arduino</name>
  <version>0.0.1</version>
  <description>Provides an interface between diff_drive_controller and an Arduino.</description>

  <maintainer email="josh.newans@gmail.com">Josh Newans</maintainer>
  <author email="josh.newans@gmail.com">Josh Newans</author>
  <license>BSD</license>


  <!-- <url type="website">http://wiki.ros.org/diffdrive_arduino</url> -->
  <url type="bugtracker">https://github.com/joshnewans/diffdrive_arduino/issues</url>
  <url type="repository">https://github.com/joshnewans/diffdrive_arduino</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>


  <export>
  </export>
  
</package>
